// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one and four - small 1`] = `
Array [
  <div>
    lead
  </div>,
  <div>
    <div>
      support-1
    </div>
    <div />
    <div>
      support-2
    </div>
    <div />
    <div>
      support-3
    </div>
    <div />
    <div>
      support-4
    </div>
  </div>,
]
`;

exports[`2. lead one and four - medium 1`] = `
<div>
  <div>
    <div>
      lead
    </div>
  </div>
  <div />
  <div>
    <div>
      support-1
    </div>
    <div />
    <div>
      support-2
    </div>
    <div />
    <div>
      support-3
    </div>
    <div />
    <div>
      support-4
    </div>
  </div>
</div>
`;
